<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idDonar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.slideshow.SlideshowFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="416dp"
        android:layout_height="678dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ScrollView
            android:layout_width="417dp"
            android:layout_height="675dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="419dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/titleregis"
                        android:layout_width="398dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/title_donaciones"
                        android:textColor="@color/black"
                        android:textSize="22dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="360dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/text_title"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        tools:ignore="TextSizeCheck" />

                    <LinearLayout
                        android:layout_width="369dp"
                        android:layout_height="368dp"
                        android:layout_gravity="center"
                        android:background="@drawable/circle_gris"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Codigo"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/idCodigo"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:background="@drawable/input_circle"
                            android:ems="10"
                            android:hint="Codigo"
                            android:inputType="textPersonName"
                            android:textColorHint="#ADB8BF" />

                        <TextView
                            android:id="@+id/textView23"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/CORREO"
                            android:textColor="@color/black"
                            android:textSize="16dp" />

                        <EditText
                            android:id="@+id/correo"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:background="@drawable/input_circle"
                            android:ems="10"
                            android:fontFamily="sans-serif-medium"
                            android:hint="Correo Electronico"
                            android:inputType="textPersonName"
                            android:textColorHint="#C3C5C8"
                            android:textSize="16dp" />

                        <TextView
                            android:id="@+id/textView14"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/DESCRIPCION"
                            android:textColor="@color/black"
                            android:textSize="16dp" />

                        <EditText
                            android:id="@+id/descripcion"
                            android:layout_width="match_parent"
                            android:layout_height="54dp"
                            android:background="@drawable/input_circle"
                            android:ems="10"
                            android:fontFamily="sans-serif-medium"
                            android:hint="Descripcion"
                            android:inputType="textPersonName"
                            android:textColorHint="#C3C5C8"
                            android:textSize="16dp" />

                        <TextView
                            android:id="@+id/textView19"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/MONEDA"
                            android:textColor="@color/black" />

                        <EditText
                            android:id="@+id/spinner_moneda"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:background="@drawable/input_circle"
                            android:visibility="visible" />

                        <TextView
                            android:id="@+id/textView15"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/MONTODONAR"
                            android:textColor="@color/black" />

                        <EditText
                            android:id="@+id/editTextTextPersonName4"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:background="@drawable/input_circle"
                            android:ems="10"
                            android:fontFamily="sans-serif-medium"
                            android:hint="Monto a Donar"
                            android:inputType="textPersonName"
                            android:textColorHint="#C3C5C8" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="58dp"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/btnsession"
                            android:layout_width="151dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Donar"
                            app:backgroundTint="#7E22CD"
                            app:icon="@drawable/moneydonation"
                            app:iconGravity="start"
                            app:iconTint="@color/white" />
                    </LinearLayout>

                    <include
                        layout="@layout/footer"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>