<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <LinearLayout
        android:layout_width="405dp"
        android:layout_height="659dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="372dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/nav_host_fragment_content_main"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:gravity="center"
                android:text="@string/hg_da"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="343dp"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/descripcion"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="368dp"
            android:layout_height="101dp"
            android:layout_gravity="center"
            android:contentDescription="scr_horz"
            app:layout_constraintBottom_toTopOf="@+id/scl_"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="80dp"
                        android:layout_height="50dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/img" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="80dp"
                        android:layout_height="50dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/img_1" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="80dp"
                        android:layout_height="50dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/img_2" />

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="80dp"
                        android:layout_height="50dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/img_3" />

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="80dp"
                        android:layout_height="50dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/img_4" />

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="80dp"
                        android:layout_height="50dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/img_5" />
                </LinearLayout>
            </LinearLayout>
        </HorizontalScrollView>

        <ScrollView
            android:id="@+id/scl_"
            android:layout_width="match_parent"
            android:layout_height="474dp"
            android:layout_gravity="right"
            android:contentDescription="scroll"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/nav_host_fragment_content_main"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1117dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="1117dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="4dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginEnd="6dp"
                                android:background="#7E22CC"
                                android:gravity="center"
                                android:paddingBottom="10dp"
                                android:text="@string/primer_txt"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="742dp"
                                android:background="#F7F9FB"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textView5"
                                    android:layout_width="367dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginTop="20dp"
                                    android:layout_marginBottom="10dp"
                                    android:text="@string/mission"
                                    android:textColor="@color/black"
                                    android:textSize="22dp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/textView4"
                                    android:layout_width="374dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginLeft="7dp"
                                    android:background="@color/fondo1"
                                    android:gravity="center"
                                    android:text="@string/mision_t"
                                    android:textColor="#858585"
                                    android:textSize="16dp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/textView6"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="10dp"
                                    android:layout_marginTop="20dp"
                                    android:layout_marginBottom="10dp"
                                    android:text="@string/vision"
                                    android:textColor="@color/black"
                                    android:textSize="22dp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/textView7"
                                    android:layout_width="363dp"
                                    android:layout_height="263dp"
                                    android:layout_gravity="center"
                                    android:layout_marginLeft="7dp"
                                    android:background="@color/fondo1"
                                    android:gravity="center"
                                    android:paddingBottom="20dp"
                                    android:text="@string/vision_t"
                                    android:textColor="#858585"
                                    android:textSize="16dp"
                                    android:textStyle="bold" />

                            </LinearLayout>

                            <include
                                layout="@layout/footer"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>