<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="424dp"
        android:layout_height="694dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="417dp"
            android:layout_height="678dp"
            android:gravity="bottom"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/titleregis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Adminitrador Registro"
                android:textColor="@color/black"
                android:textSize="22dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="376dp"
                android:layout_height="294dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Codigo"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/input_circle"
                    android:ems="10"
                    android:hint="Codigo"
                    android:inputType="textPersonName"
                    android:textColorHint="#ADB8BF" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/Nombre"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/nombre"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/input_circle"
                    android:ems="10"
                    android:fontFamily="sans-serif-medium"
                    android:hint="Nombre"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textColorHint="#C3C5C8"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/Correoelectrónico"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/descripcion"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:background="@drawable/input_circle"
                    android:ems="10"
                    android:fontFamily="sans-serif-medium"
                    android:hint="Correo"
                    android:inputType="textWebEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="#C3C5C8"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Contraseña"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/editTextTextPersonName4"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/input_circle"
                    android:ems="10"
                    android:fontFamily="sans-serif-medium"
                    android:hint="Contraseña"
                    android:inputType="numberPassword"
                    android:textColor="@color/black"
                    android:textColorHint="#C3C5C8" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnsession"
                    android:layout_width="151dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Registrar"
                    app:backgroundTint="#A032DE"
                    app:iconGravity="start"
                    app:iconTint="@color/white" />
            </LinearLayout>

            <include
                layout="@layout/footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>